# polars-vs-pandas-vs-duckdb-benchmarks

adults-income-pattern-analysis/: README.md  adult-income-pattern-analysis.ipynb  benchmark_libs.py  main.py  main_plotly.py  pyproject.toml
benchmark-50-mil-rows-with-duckdb-polars-pandas-datafusion/: .gitignore  README.md  main.py  pyproject.toml
benchmark-50-mil-rows-with-duckdb-polars-pandas-datafusion/rust-benchmark/: Cargo.toml  README.md
benchmark-50-mil-rows-with-duckdb-polars-pandas-datafusion/rust-benchmark/src/: main.rs
pandas-polars-duckdb-fastest-local-analysis/: README.md  benchmark-harness.py  create-reproducable-dataset.py  duckdb-analysis.py  pandas-analysis.py  polars-analysis.py  pyproject.toml
