[project]
name = "benchmark-50-mil-rows-with-duckdb-polars-pandas-datafusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datafusion>=53.0.0",
    "duckdb>=1.5.3",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "psutil>=7.1.3",
    "pyarrow>=24.0.0",
]
